Assignment-08/k8s/traefik/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 8000
    - name: dashboard
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --api.dashboard=true
            - --api.insecure=true
            - --providers.kubernetescrd
            - --providers.kubernetesingress
            - --entrypoints.web.address=:8000
          ports:
            - name: web
              containerPort: 8000
            - name: dashboard
              containerPort: 8080
