Assignment-08/k8s/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.julian-vasquez.com`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
